Fix dropdown z-index

--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ body {
     
     display: none;
     margin-top: 31px;
-    z-index: -1;
+
     background-color: #454545;
     min-width: 160px;
     position: absolute;
